@@ -7,31 +7,21 @@
 ****************************************************/
 package Sirius.navigator.resource;
 
-/*******************************************************************************
+/**
+ * *****************************************************************************
  *
- * Copyright (c)        :       EIG (Environmental Informatics Group)
- * http://www.htw-saarland.de/eig
- * Prof. Dr. Reiner Guettler
- * Prof. Dr. Ralf Denzer
+ * Copyright (c) : EIG (Environmental Informatics Group) http://www.htw-saarland.de/eig Prof. Dr. Reiner Guettler Prof.
+ * Dr. Ralf Denzer
  *
- * HTWdS
- * Hochschule fuer Technik und Wirtschaft des Saarlandes
- * Goebenstr. 40
- * 66117 Saarbruecken
- * Germany
+ * HTWdS Hochschule fuer Technik und Wirtschaft des Saarlandes Goebenstr. 40 66117 Saarbruecken Germany
  *
- * Programmers          :       Pascal
+ * Programmers : Pascal
  *
- * Project                      :       WuNDA 2
- * Filename             :
- * Version                      :       1.0
- * Purpose                      :
- * Created                      :       01.10.1999
- * History                      :
+ * Project : WuNDA 2 Filename : Version : 1.0 Purpose : Created : 01.10.1999 History :
  *
- *******************************************************************************/
+ ******************************************************************************
+ */
 import Sirius.navigator.connection.ConnectionInfo;
-import Sirius.navigator.tools.BrowserControl;
 import Sirius.navigator.ui.LAFManager;
 import Sirius.navigator.ui.progress.*;
 
@@ -60,7 +50,6 @@ public final class PropertyManager {
 
     private static final Logger logger = Logger.getLogger(PropertyManager.class);
     private static final PropertyManager manager = new PropertyManager();
-
     private static final String HEADER = "Navigator Configuration File";
     public static final String TRUE = "true";
     public static final String FALSE = "false";
@@ -69,6 +58,24 @@ public final class PropertyManager {
     public static final String SORT_ID_TOKEN = "%id%";
     public static final int MIN_SERVER_THREADS = 3;
     public static final int MAX_SERVER_THREADS = 10;
+    public static final String FX_HTML_RENDERER = "fxWebView";
+    public static final String CALPA_HTML_RENDERER = "calpa";
+    public static final String FLYING_SAUCER_HTML_RENDERER = "flyingSaucer";
+    public static boolean USE_CUSTOM_BEAN_PERMISSION_PROVIDER_FOR_SEARCH = false;
+
+    //~ Enums ------------------------------------------------------------------
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @version  $Revision$, $Date$
+     */
+    public static enum PermissionModus {
+
+        //~ Enum constants -----------------------------------------------------
+
+        MANDATORY, OPTIONAL, FORBIDDEN
+    }
 
     //~ Instance fields --------------------------------------------------------
 
@@ -98,16 +105,29 @@ public final class PropertyManager {
     private boolean application = true;
     private AppletContext appletContext = null;
     private final ProgressObserver sharedProgressObserver;
-    private String language;
-    private String country;
-    private java.util.Locale locale;
     private boolean editable;
     private boolean autoClose = false;
-    private boolean useFlyingSaucer = false;
-    private boolean useWebView = false;
+    private boolean workingSpaceEnabled = false;
+    private boolean protocolEnabled = false;
+    private boolean postfilterEnabled = false;
+    private boolean fulltextSearchToolbarItemEnabled = false;
+    private PermissionModus permissionModus = PermissionModus.MANDATORY;
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @deprecated  use {@link descriptionPaneHtmlRenderer} instead
+     */
+    @Deprecated private boolean useFlyingSaucer = false;
+    /**
+     * DOCUMENT ME!
+     *
+     * @deprecated  use {@link descriptionPaneHtmlRenderer} instead
+     */
+    @Deprecated private boolean useWebView = false;
+    private String descriptionPaneHtmlRenderer = null;
     private boolean enableSearchDialog = false;
     private boolean usePainterCoolPanel = true;
-
     private transient String proxyURL;
     private transient String proxyUsername;
     private transient String proxyPassword;
@@ -137,15 +157,13 @@ public final class PropertyManager {
         setSortChildren(false);
         setSortAscending(false);
 
-        setCountry("DE");  // NOI18N
-        setLanguage("de"); // NOI18N
-
         setLoadable(true);
         setSaveable(false);
         setConnectionInfoSaveable(false);
 
         setUseFlyingSaucer(false);
         setUseWebView(false);
+        setDescriptionPaneHtmlRenderer(PropertyManager.CALPA_HTML_RENDERER);
         setEnableSearchDialog(false);
 
         connectionInfo.setCallserverURL("rmi://192.168.0.12/callServer"); // NOI18N
@@ -219,6 +237,118 @@ public final class PropertyManager {
     /**
      * DOCUMENT ME!
      *
+     * @return  DOCUMENT ME!
+     */
+    public boolean isWorkingSpaceEnabled() {
+        return workingSpaceEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  workingSpaceEnabled  DOCUMENT ME!
+     */
+    public void setWorkingSpaceEnabled(final boolean workingSpaceEnabled) {
+        this.workingSpaceEnabled = workingSpaceEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  input  DOCUMENT ME!
+     */
+    public void setWorkingSpaceEnabled(final String input) {
+        if ((input != null) && input.trim().equalsIgnoreCase("true")) {
+            this.workingSpaceEnabled = true;
+        }
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @return  DOCUMENT ME!
+     */
+    public boolean isProtocolEnabled() {
+        return protocolEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  protocolEnabled  DOCUMENT ME!
+     */
+    public void setProtocolEnabled(final boolean protocolEnabled) {
+        this.protocolEnabled = protocolEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  input  DOCUMENT ME!
+     */
+    public void setProtocolEnabled(final String input) {
+        if ((input != null) && input.trim().equalsIgnoreCase("true")) {
+            this.protocolEnabled = true;
+        }
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @return  DOCUMENT ME!
+     */
+    public boolean isPostfilterEnabled() {
+        return postfilterEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  postfilterEnabled  DOCUMENT ME!
+     */
+    public void setPostfilterEnabled(final boolean postfilterEnabled) {
+        this.postfilterEnabled = postfilterEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  input  DOCUMENT ME!
+     */
+    public void setPostfilterEnabled(final String input) {
+        setPostfilterEnabled((input != null) && input.trim().equalsIgnoreCase("true"));
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @return  DOCUMENT ME!
+     */
+    public boolean isFulltextSearchToolbarItemEnabled() {
+        return fulltextSearchToolbarItemEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  fulltextSearchToolbarItemEnabled  DOCUMENT ME!
+     */
+    public void setFulltextSearchToolbarItemEnabled(final boolean fulltextSearchToolbarItemEnabled) {
+        this.fulltextSearchToolbarItemEnabled = fulltextSearchToolbarItemEnabled;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  input  DOCUMENT ME!
+     */
+    public void setFulltextSearchToolbarItemEnabled(final String input) {
+        setFulltextSearchToolbarItemEnabled((input != null) && input.trim().equalsIgnoreCase("true"));
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
      * @param  width  DOCUMENT ME!
      */
     public void setWidth(final String width) {
@@ -247,6 +377,46 @@ public final class PropertyManager {
      */
     public int getWidth() {
         return this.width;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  permissionModus  DOCUMENT ME!
+     */
+    public void setPermissionModus(final String permissionModus) {
+        final PermissionModus modus;
+        if ("explicitUsergoupForbidden".equals(permissionModus)) {
+            modus = PermissionModus.FORBIDDEN;
+        } else if ("explicitUsergroupOptional".equals(permissionModus)) {
+            modus = PermissionModus.OPTIONAL;
+        } else {
+            modus = PermissionModus.MANDATORY;
+        }
+        try {
+            this.setPermissionModus(modus);
+        } catch (Exception exp) {
+            logger.warn("setPermissionModus(): invalid property 'permissionModus': '" + exp.getMessage() + "'"); // NOI18N
+        }
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  permissionModus  DOCUMENT ME!
+     */
+    public void setPermissionModus(final PermissionModus permissionModus) {
+        this.permissionModus = permissionModus;
+        properties.setProperty("navigator.usergroup.rule", String.valueOf(permissionModus)); // NOI18N
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @return  DOCUMENT ME!
+     */
+    public PermissionModus getPermissionModus() {
+        return permissionModus;
     }
 
     /**
@@ -742,14 +912,20 @@ public final class PropertyManager {
      */
     public void setUseFlyingSaucer(final boolean useFlyingSaucer) {
         this.useFlyingSaucer = useFlyingSaucer;
+        if (useFlyingSaucer) {
+            setDescriptionPaneHtmlRenderer(PropertyManager.FLYING_SAUCER_HTML_RENDERER);
+        }
         properties.setProperty("setUseFlyingSaucer", String.valueOf(this.useFlyingSaucer)); // NOI18N
     }
 
     /**
      * Getter for property useFlyingSaucer.
      *
-     * @return  Value of property useFlyingSaucer.
+     * @return      Value of property useFlyingSaucer.
+     *
+     * @deprecated  use {@link getDescriptionPaneHtmlRenderer()} instead
      */
+    @Deprecated
     public boolean isUseFlyingSaucer() {
         return this.useFlyingSaucer;
     }
@@ -780,14 +956,20 @@ public final class PropertyManager {
      */
     public void setUseWebView(final boolean useWebView) {
         this.useWebView = useWebView;
+        if (useWebView) {
+            setDescriptionPaneHtmlRenderer(PropertyManager.FX_HTML_RENDERER);
+        }
         properties.setProperty("useWebView", String.valueOf(this.useWebView)); // NOI18N
     }
 
     /**
      * Getter for property useWebView.
      *
-     * @return  Value of property useWebView.
+     * @return      Value of property useWebView.
+     *
+     * @deprecated  use {@link getDescriptionPaneHtmlRenderer()} instead
      */
+    @Deprecated
     public boolean isUseWebView() {
         return this.useWebView;
     }
@@ -863,56 +1045,60 @@ public final class PropertyManager {
             /*if(property.equalsIgnoreCase("title"))
              * { this.setTitle(value); }else*/
         }
-        if (property.equalsIgnoreCase("width")) {                         // NOI18N
+        if (property.equalsIgnoreCase("width")) {                                              // NOI18N
             this.setWidth(value);
-        } else if (property.equalsIgnoreCase("height")) {                 // NOI18N
+        } else if (property.equalsIgnoreCase("height")) {                                      // NOI18N
             this.setHeight(value);
-        } else if (property.equalsIgnoreCase("maximizeWindow")) {         // NOI18N
+        } else if (property.equalsIgnoreCase("maximizeWindow")) {                              // NOI18N
             this.setMaximizeWindow(value);
-        } else if (property.equalsIgnoreCase("advancedLayout")) {         // NOI18N
+        } else if (property.equalsIgnoreCase("advancedLayout")) {                              // NOI18N
             this.setAdvancedLayout(value);
-        } else if (property.equalsIgnoreCase("lookAndFeel")) {            // NOI18N
+        } else if (property.equalsIgnoreCase("lookAndFeel")) {                                 // NOI18N
             this.setLookAndFeel(value);
-        } else if (property.equalsIgnoreCase("autoLogin")) {              // NOI18N
+        } else if (property.equalsIgnoreCase("autoLogin")) {                                   // NOI18N
             this.setAutoLogin(value);
-        } else if (property.equalsIgnoreCase("connectionClass")) {        // NOI18N
+        } else if (property.equalsIgnoreCase("connectionClass")) {                             // NOI18N
             this.setConnectionClass(value);
-        } else if (property.equalsIgnoreCase("connectionProxyClass")) {   // NOI18N
+        } else if (property.equalsIgnoreCase("connectionProxyClass")) {                        // NOI18N
             this.setConnectionProxyClass(value);
-        } else if (property.equalsIgnoreCase("maxConnections")) {         // NOI18N
+        } else if (property.equalsIgnoreCase("maxConnections")) {                              // NOI18N
             this.setMaxConnections(value);
-        } else if (property.equalsIgnoreCase("sortChildren")) {           // NOI18N
+        } else if (property.equalsIgnoreCase("sortChildren")) {                                // NOI18N
             this.setSortChildren(value);
-        } else if (property.equalsIgnoreCase("sortAscending")) {          // NOI18N
+        } else if (property.equalsIgnoreCase("sortAscending")) {                               // NOI18N
             this.setSortAscending(value);
-        } else if (property.equalsIgnoreCase("saveable")) {               // NOI18N
+        } else if (property.equalsIgnoreCase("saveable")) {                                    // NOI18N
             this.setSaveable(value);
-        } else if (property.equalsIgnoreCase("loadable")) {               // NOI18N
+        } else if (property.equalsIgnoreCase("loadable")) {                                    // NOI18N
             this.setLoadable(value);
-        } else if (property.equalsIgnoreCase("language")) {               // NOI18N
-            this.setLanguage(value);
-        } else if (property.equalsIgnoreCase("country")) {                // NOI18N
-            this.setCountry(value);
-        } else if (property.equalsIgnoreCase("connectionInfoSaveable")) { // NOI18N
+        } else if (property.equalsIgnoreCase("connectionInfoSaveable")) {                      // NOI18N
             this.setConnectionInfoSaveable(value);
-        } else if (property.equalsIgnoreCase("callserverURL")) {          // NOI18N
+        } else if (property.equalsIgnoreCase("callserverURL")) {                               // NOI18N
             this.connectionInfo.setCallserverURL(value);
-        } else if (property.equalsIgnoreCase("password")) {               // NOI18N
+        } else if (property.equalsIgnoreCase("password")) {                                    // NOI18N
             this.connectionInfo.setPassword(value);
-        } else if (property.equalsIgnoreCase("userDomain")) {             // NOI18N
+        } else if (property.equalsIgnoreCase("userDomain")) {                                  // NOI18N
             this.connectionInfo.setUserDomain(value);
-        } else if (property.equalsIgnoreCase("usergroup")) {              // NOI18N
+        } else if (property.equalsIgnoreCase("usergroup")) {                                   // NOI18N
             this.connectionInfo.setUsergroup(value);
-        } else if (property.equalsIgnoreCase("usergroupDomain")) {        // NOI18N
+        } else if (property.equalsIgnoreCase("usergroupDomain")) {                             // NOI18N
             this.connectionInfo.setUsergroupDomain(value);
-        } else if (property.equalsIgnoreCase("username")) {               // NOI18N
+        } else if (property.equalsIgnoreCase("username")) {                                    // NOI18N
             this.connectionInfo.setUsername(value);
-        } else if (property.equalsIgnoreCase("useFlyingSaucer")) {        // NOI18N
+        } else if (property.equalsIgnoreCase("useFlyingSaucer")) {                             // NOI18N
+            logger.warn(
+                "Property useFlyingSaucer is deprecated and should be replaced with Property " // NOI18N
+                        + "navigator.descriptionPane.htmlRenderer=fylingSaucer");              // NOI18N
             this.setUseFlyingSaucer(value);
-        } else if (property.equalsIgnoreCase("useWebView")) {             // NOI18N
+        } else if (property.equalsIgnoreCase("useWebView")) {                                  // NOI18N
+            logger.warn(
+                "Property useWebView is deprecated and should be replaced with Property "      // NOI18N
+                        + "navigator.descriptionPane.htmlRenderer=fxWebView");                 // NOI18N
             this.setUseWebView(value);
-        } else if (property.equalsIgnoreCase("enableSearchDialog")) {     // NOI18N
+        } else if (property.equalsIgnoreCase("enableSearchDialog")) {                          // NOI18N
             this.setEnableSearchDialog(value);
+        } else if (property.equalsIgnoreCase("navigator.usergroup.rule")) {                    // NOI18N
+            this.setPermissionModus(value);
         } else if (property.equals("navigator.proxy.url")) {
             this.setProxyURL(value);
         } else if (property.equals("navigator.proxy.username")) {
@@ -921,6 +1107,16 @@ public final class PropertyManager {
             this.setProxyPassword(value);
         } else if (property.equals("navigator.proxy.domain")) {
             this.setProxyDomain(value);
+        } else if (property.equals("navigator.descriptionPane.htmlRenderer")) {
+            this.setDescriptionPaneHtmlRenderer(value);
+        } else if (property.equals("navigator.workingspace.enabled")) {
+            this.setWorkingSpaceEnabled(value);
+        } else if (property.equals("navigator.postfilter.enabled")) {
+            this.setPostfilterEnabled(value);
+        } else if (property.equals("navigator.protocol.enabled")) {
+            this.setProtocolEnabled(value);
+        } else if (property.equals("navigator.fulltextSearchToolbarItem.enabled")) {
+            this.setFulltextSearchToolbarItemEnabled(value);
         }
     }
 
@@ -1015,7 +1211,7 @@ public final class PropertyManager {
         try {
             final String parameter = this.properties.getProperty("plugins");
             setHttpInterfacePort(new Integer(properties.getProperty("httpInterfacePort", "9099")));
-            setAutoClose(new Boolean(properties.getProperty("closeWithoutAsking", "false")));
+            setAutoClose(Boolean.valueOf(properties.getProperty("closeWithoutAsking", "false")));
 
             if ((parameter != null) && (parameter.length() > 0)) {
                 pluginList = new ArrayList();
@@ -1029,6 +1225,24 @@ public final class PropertyManager {
         } catch (Exception except) {
             logger.fatal(except, except);
         }
+
+//        try {
+//            final String parameter = this.properties.getProperty("plugins");
+//            setHttpInterfacePort(new Integer(properties.getProperty("httpInterfacePort", "9099")));
+//            setAutoClose(Boolean.valueOf(properties.getProperty("closeWithoutAsking", "false")));
+//
+//            if ((parameter != null) && (parameter.length() > 0)) {
+//                pluginList = new ArrayList();
+//                final StringTokenizer tokenizer = new StringTokenizer(parameter, ";");
+//                while (tokenizer.hasMoreTokens()) {
+//                    final String plugin = tokenizer.nextToken().trim() + "/";
+//                    logger.info("adding plugin from config file: '" + plugin + "'");
+//                    pluginList.add(pluginPath + "/" + plugin);
+//                }
+//            }
+//        } catch (Exception except) {
+//            logger.fatal(except, except);
+//        }
 
         this.isPluginListAvailable();
     }
@@ -1087,11 +1301,6 @@ public final class PropertyManager {
                     this.configure();
                 }
             }
-        }
-
-        parameter = applet.getParameter("language"); // NOI18N
-        if ((parameter != null) && (parameter.length() > 0)) {
-            ResourceManager.getManager().setLocale(new Locale(parameter));
         }
 
         parameter = applet.getParameter("plugins"); // NOI18N
@@ -1308,90 +1517,12 @@ public final class PropertyManager {
     }
 
     /**
-     * Getter for property appletContext.
-     *
-     * @return  Value of property appletContext.
-     */
-    public AppletContext getAppletContext() {
-        if (this.appletContext == null) {
-            return BrowserControl.getControl();
-        } else {
-            return this.appletContext;
-        }
-    }
-
-    /**
      * Getter for property sharedProgressObserver.
      *
      * @return  Value of property sharedProgressObserver.
      */
     public synchronized ProgressObserver getSharedProgressObserver() {
         return this.sharedProgressObserver;
-    }
-
-    /**
-     * Getter for property language.
-     *
-     * @return  Value of property language.
-     */
-    public String getLanguage() {
-        return this.language;
-    }
-
-    /**
-     * Setter for property language.
-     *
-     * @param  language  New value of property language.
-     */
-    public void setLanguage(final String language) {
-        if (language.trim().length() == 2) {
-            this.language = language.toLowerCase();
-        } else {
-            logger.warn("malformed language code '" + language + "', setting to default (de)"); // NOI18N
-            this.language = "de";                                                               // NOI18N
-        }
-    }
-
-    /**
-     * Getter for property country.
-     *
-     * @return  Value of property country.
-     */
-    public String getCountry() {
-        return this.country;
-    }
-
-    /**
-     * Setter for property country.
-     *
-     * @param  country  New value of property country.
-     */
-    public void setCountry(final String country) {
-        if (country.length() == 2) {
-            this.country = country.toUpperCase();
-        } else {
-            logger.warn("malformed country code '" + country + "', setting to default (de)"); // NOI18N
-            this.country = "DE";                                                              // NOI18N
-        }
-    }
-
-    /**
-     * Getter for property locale.
-     *
-     * @return  Value of property locale.
-     */
-    public java.util.Locale getLocale() {
-        return new Locale(this.getLanguage(), this.getCountry());
-    }
-
-    /**
-     * Setter for property locale.
-     *
-     * @param  locale  New value of property locale.
-     */
-    public void setLocale(final java.util.Locale locale) {
-        this.setLanguage(locale.getLanguage());
-        this.setCountry(locale.getCountry());
     }
 
     /**
@@ -1455,6 +1586,34 @@ public final class PropertyManager {
      */
     public void setAutoClose(final boolean autoClose) {
         this.autoClose = autoClose;
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @param  htmlRenderer  DOCUMENT ME!
+     */
+    public void setDescriptionPaneHtmlRenderer(final String htmlRenderer) {
+        this.descriptionPaneHtmlRenderer = htmlRenderer;
+        if (descriptionPaneHtmlRenderer.equals(PropertyManager.FLYING_SAUCER_HTML_RENDERER)) {
+//            this.setUseFlyingSaucer(true);
+//            this.setUseWebView(false);
+        } else if (descriptionPaneHtmlRenderer.equals(PropertyManager.FX_HTML_RENDERER)) {
+//            this.setUseWebView(true);
+//            this.setUseFlyingSaucer(false);
+        } else {
+//            this.setUseFlyingSaucer(false);
+//            this.setUseWebView(false);
+        }
+    }
+
+    /**
+     * DOCUMENT ME!
+     *
+     * @return  DOCUMENT ME!
+     */
+    public String getDescriptionPaneHtmlRenderer() {
+        return this.descriptionPaneHtmlRenderer;
     }
 
     //~ Inner Classes ----------------------------------------------------------
